--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.12.1",
     "@mui/x-data-grid": "^6.3.1",
     "@mui/x-data-grid-generator": "^6.3.1",
+    "@mui/x-date-pickers": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
